--- a/001basics/index.html
+++ b/001basics/index.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>美人鱼</title>
+    <style type="text/css">
+       body {background-image:url(images/123.jpg);     
+       background-size:100% 100%;   
+       height:100%;
+}
+        html {height:100%;}
+    </style>
+  </head>
   <body>
-    <h3>拜托成功</h3>
-    <p>多次尝试以后。。。</p>
-    <img src="images/123.jpg"/>
+    <h3>美人鱼</h3>
+    <p>我在沙滩画个圆圈，属于我俩安逸世界</p>
+    <p>不用和别人连线</p>
+    <p>我不管你来自深渊，也不在乎身上鳞片</p>
+    <p>爱情能超越一切</p>
+    <p>只要你在我身边所有蜚语流言完全视而不见</p>
+    <p>请不要匆匆一面一转身就潜入海平线</p>
+    <p>传说中你为爱甘心被搁浅</p>
+    <p>我也愿意为你潜入海里面</p>
+    <p>怎么忍心断绝，忘记我不变的誓言</p>
+    <p>我眼泪断了线</p>
+     
   </body>
 </html>
