--- a/001basics/index.html
+++ b/001basics/index.html
@@ -11,7 +11,7 @@
     </style>
   </head>
   <body>
-    <audio src="wav/song.mp3" controls="controls" autoplay="autoplay"></audio>
+    <audio src="wav/meirenyu.mp3" controls="controls" autoplay="autoplay"></audio>
     <h3>美人鱼</h3>
     <p>我在沙滩画个圆圈，属于我俩安逸世界</p>
     <p>不用和别人连线</p>
